[HF] Fixed alignment

--- a/apps/landing-unl-seminar-v1/src/app/travel-information/travel-information.page.scss
+++ b/apps/landing-unl-seminar-v1/src/app/travel-information/travel-information.page.scss
@@ -1,4 +1,4 @@
-ion-card {
+.social ion-card {
   * {
     display: flex;
   }
